# FusionBrowser

./: CMakeLists.txt  build.bat  fix_sources.py
.github/workflows/: build.yml  main.yml
FusionBrowser/: CMakeLists.txt  installer.iss
FusionBrowser/resources/: fusion.qrc  fusion.rc
FusionBrowser/src/: browsertab.h  database.cpp  downloadspanel.cpp  downloadspanel.h  extensions.cpp  extensions.h  homepage.cpp  importer.cpp  loadbar.cpp  mainwindow.cpp  onboarding.cpp  settings.h  settingspanel.cpp  settingspanel.h  sidepanel.cpp  tabbar.h  urlbar.cpp
resources/: fusion.rc
src/: browsertab.cpp  database.h  downloadspanel.h  extensions.cpp  homepage.cpp  homepage.h  importer.h  loadbar.h  main.cpp  mainwindow.cpp  mainwindow.h  onboarding.cpp  onboarding.h  settings.cpp  settingspanel.h  sidepanel.h  tabbar.cpp  tabbar.h  themes.cpp  themes.h  urlbar.h
